# reactor

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  reactor.h  reactor_events.h  reactor_udp.h
benchmarks/: echo_bench.cc
examples/: echo_server.cc
test/: events_test.cc  test.cc  udp_test.cc
